--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-tensorflow
-keras
+streamlit
+fpdf
 pandas
 numpy
-pillow
-wandb
-h5py
-opencv-python
+scikit-learn
+matplotlib
 scikit-learn
 scikit-image
